alignment fixes

--- a/resources/js/pages/settings/components/lenses/components/lensesType/styles.module.scss
+++ b/resources/js/pages/settings/components/lenses/components/lensesType/styles.module.scss
@@ -236,3 +236,9 @@
         background-color: #cbcbcb;
     }
 }
+.edit-slot-sub-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-left: 50px;
+}
